--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <header></header>
     <section class="carousel"></section>
     <section class="product"></section>
+    <footer>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, officiis.</p>
+    </footer>
 </body>
 </html>
